# MY_CI_CD

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  README.md  meson.build  meson_options.txt
.codearts/: pipeline.yml
.github/: ci-vars.json
.github/actions/setup-meson-env/: action.yml
.github/actions/setup_meson_env/: action.yml
.github/workflows/: _analyze.yml  _build.yml  _coverage.yml  _lint.yml  _release.yml  _sanitizers.yml  build-and-test-reusable.yml  build-test-reusable.yml  ci.yml  coverage.yml  release.yml  sanitizers.yml
.gitlab/: ci.yml
.gitlab/includes/: build_templates.yml  setup_meson_env.yml
.gitlab/workflows/: ci.yml  coverage.yml  release.yml  sanitizers.yml
app/: main.cpp  meson.build
docs/: CI_CD_PIPLINE.md  GTEST_GUIDE.md
include/awesome_calc/: calc.hpp
src/: calc.cpp  meson.build
tests/: meson.build  test_calc.cpp
tests/integration/: cli_integration_test.cpp
tests/unit/: calc_unit_test.cpp
tools/: clang-format-all.sh
